--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+header ul li {
+    @apply px-3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-primary {
+    background: rgb(85, 81, 227);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-secondary {
+    background: #2b2d77
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.mobile-nav{
+    @apply fixed top-12 left-0 bg-gray-900 w-full; 
 }
 
-.App-link {
-  color: #61dafb;
+.mobile-nav li {
+    @apply w-full h-full text-center border-b-2 ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+    @apply bg-primary font-bold hover:border-2 border-white px-5 py-2
+}
+
+html {
+    scroll-behavior:smooth ;
 }
